# super-ai

./: .gitignore  :wqa  AGENTS.md  SPEC.md  TODO.md  backtest.py  backtest_compare.py  backtest_nifty.py  coverage.sh  cron.sh  dev_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  status.sh  stop.sh  test.txt  tmux.sh  watch.sh
factory/: .bash_profile  .real_user_env  1_ob.yml  2_pivot.yml  2_pivot_discarded.yml  3_hilo.txt  3_hilo.yml  4_rounded.yml  4_rounded_discarded.yml  5_newpivot.yml  cron.sh  crontab.sh  crontab.txt  hilo.yml  log.txt  mk_cron.sh  openingbalance.yml  read_file.php  run.sh  run.txt  run_algo.bat  set_1.yml  set_2 .yml  set_2.yml  set_3.yml  settings.yml  symbol.json  symbols.yaml  symbols.yml
scripts/: post-renko-fix.sh  pre-renko-fix.sh  setup-ssh-key.sh  simulate_candle.py
server/: main.py
server/static/: style.css
server/templates/: base.html  file.html  files.html  index.html  live_logs.html  log.html  style.css  terminal.html  tmux.html  tmux_page.html
src/: constants.py  delete_me.py  flow-chart.py  helper.py  main.py  one_trade.py  paper.py  state_manager.py  symbol.py  symbols.py  time_manager.py  trade.py  trade_manager.py  utils.py  wserver.py
src/config/: interface.py
src/core/: build.py  engine.py  strategy.py
src/deprecated/: hilo.py  oblegacy.py  (+1 more)
tests/: conftest.py  factory_settings.py  test_breakout.py  test_compress_candles.py  test_grid.py  test_hilo.py  test_newpivot.py  test_one_trade.py  test_opening_balance.py  test_openingbalance.py  test_optionsymbol.py  test_state_manager.py  test_symbol.py
(+44 files in other folders)
